<resources>

    //menu górne
    <string name="app_name">Idiom Quiz</string>
    <string name="autor" translatable="false">Ewelina Kłobut</string>
    <string name="send">Send message</string>
    <string name="share">Share</string>
    <string name="about">About the program</string>

    //menu boczne
    <string name="quiz">New game</string>
    <string name="statystyki">Statistics</string>
    <string name="powtorki">Repetition table</string>
    <string name="pomoc">Help</string>
    <string name="nav_open_drawer">Open the drawer</string>
    <string name="nav_close_drawer">Close the drawer</string>

    //startPage
    <string name="startPageTitle" translatable="false">Idiom Quiz</string>
    <string name="hightScore">Highest score:</string>
    <string name="nextQuestion">Next question</string>
    <string name="nav_projekt_temat" translatable="false">Idiom Quiz</string>
    <string name="nav_autor">Author</string>
    <string name="nav_projekt" translatable="false">Idiom Quiz</string>
    <string name="selectLevel">" Select level"</string>
    <string-array name="level_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    //ustawienia
    <!-- TODO: Remove or change this placeholder text -->
    <string name="lastResult">Last Result</string>

    //kontrolki panel uzytkownika
    <string name="twoj_poz">Your level of advancement</string>

    //poziom
    <string-array name="poziom">
        <item>Łatwy</item>
        <item>Średni</item>
        <item>Zaawansowany</item>
    </string-array>
    <string name="urodziny">How many years have you been learning english?</string>
    <string name="widocznosc">Do you want to be visible to other users?</string>

    //admin
    <string name="add_new_idiom">Add new idiom</string>
    <string name="btnAdminNext">Next</string>
    <string name="validationPanelUser">Nick or language or year are empty. Please  complete.</string>
    <string name="add_new_option_PL">Enter answer in Polish</string>
    <string name="btnAdminSave">Save option</string>
    <string name="add_new_option_EN">Enter answer in English</string>
    <string name="option_number">Option number 1</string>
    <string name="uesr_panel">User panel</string>
    <string name="setting">Setting</string>
    <string name="panel_admin">Admin panel</string>
    <string name="confirm">Confirm</string>
    <string name="addedToReplace">Dodane do powtórek</string>
    <string name="no_added_to_replace">Add to replace</string>
    <string name="difficultyLevel">Łatwy</string>
    <string name="repeat">Add to repeat</string>
    <string name="btnAddFotoGalery">Add a photo from the gallery cell</string>
    <string name="btnAddFotoInternet">Add a photo from the internet</string>
    <string name="finishRepeatBoard">The end</string>
    <string name="previo_question">Previous question</string>
    <string name="path_to_Internet_img">" Enter the path to the picture from the internet"</string>
    <string name="add_pat_img_btn">Add path to image</string>
    <string name="validationPath">" The source for the photo is not correct"</string>
    <string name="no_answer_is_marked_as_correct">" None of the 3 answer options are set as valid"</string>
    <string name="btnPrevuis">Back</string>
    <string name="listAdmin">All list Question</string>
    <string name="correct_profil">Correct your accound</string>
    <string name="add_new_option">Add options</string>
    <string name="start_page">Start the game</string>
    <string name="confirm_added_question_to_database">Question is upload sucessful</string>
    <string name="learn_en_idiom">Learn English Idiom</string>
    <string name="checkbox_is_right_answer">Is the answer correct?</string>
    <string name="validator_only_once_good_option_save">You cannot set the answer to true a second time</string>
    <string name="checkbox_translate">Translate option to English</string>
    <string name="add_update_idiom">Update question</string>
    <string name="what_do_you_do_admin">What do you want to do?</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="updateQuestion">Edit idiom</string>
    <string name="edit_options">Edit options</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete this idiom?</string>
    <string name="sucessfull_delete_idiom">Suessfull delete idiom</string>
    <string name="setting_button">Set</string>
    <string name="how_many_question_in_quiz">How many question in quiz?</string>
    <string name="no_question_in_repeat_board">No question in this board</string>
    <string name="pitch">Set pitch</string>
    <string name="speed">Set speech</string>
    <string name="valid_to_big_number_setting_question">" too large number. The maximum  is 20"</string>
    <string name="question">Question</string>
    <string name="score">Score</string>
    <string name="wrong">Wrong</string>
    <string name="difficulty">Difficulty</string>
    <string name="valid_exit_in_quiz">Press back again to finish</string>
    <string name="valid_check_answer">Please select answer</string>
    <string name="finishQuiz">Finish</string>
    <string name="your_score">Your score</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="nameIsEmpty">The name cannot be empty</string>
    <string name="nameIsToSmall">The name cannot be less than 6 characters</string>

</resources>
