<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/quiz"
            android:checkable="true"
            android:icon="@drawable/ic_new_game"
            android:title="@string/quiz">
            @color/overflow_background</item>
        <item
            android:id="@+id/statistic"
            android:checkable="true"
            android:icon="@drawable/ic_statistic"
            android:title="@string/statystyki"
            >@color/overflow_background</item>
        <item
            android:id="@+id/repeat"
            android:checkable="true"
            android:icon="@drawable/ic_repeat_board"
            android:title="@string/powtorki" >
            @color/overflow_background</item>
        <item
            android:id="@+id/help"
            android:checkable="true"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/pomoc" >
            @color/overflow_background</item>
    </group>

    <item android:title="@string/nav_projekt">
        <menu>
            <item
                android:id="@+id/temat"
                android:title="@string/nav_projekt_temat"
                android:icon="@drawable/ic_o_grze">
                @color/overflow_background</item>
            <item
                android:id="@+id/autor"
                android:title="@string/nav_autor"
                android:icon="@drawable/ic_author" >
                @color/overflow_background</item>

        </menu>

    </item>
</menu>