<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#CCDAE7">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CCDAE7">

    <TextView
        android:id="@+id/option_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/option_number"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:background="#2C4158"/>

    <TextView
        android:id="@+id/idiom_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= ""
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:background="#2C4158"/>

    <TextView
    android:id="@+id/option_tv_PL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text= "@string/add_new_option_PL"
    android:textSize="15dp"
    android:gravity="center"
    android:padding="5dp"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/option_et_PL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textAutoCorrect"
        android:gravity="center"
        android:background="@android:color/white"
        android:padding="10dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/option_tv_EN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/add_new_option_EN"
        android:textSize="15dp"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/option_et_EN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textAutoCorrect"
        android:gravity="center"
        android:background="@android:color/white"
        android:padding="10dp"
        android:layout_marginTop="5dp"/>


    <CheckBox
        android:id="@+id/checkBoxGoodOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/checkbox_is_right_answer"
        android:layout_marginTop="10dp"/>

    <CheckBox
        android:id="@+id/checkBoxTranslate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/checkbox_translate"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnAddOption"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_next_question"
        android:padding="20dp"
        android:text="@string/btnAdminSave" />

    <Button
        android:id="@+id/btnPrevius"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_add_to_repeat"
        android:padding="20dp"
        android:text="@string/btnPrevuis" />
</LinearLayout>
</ScrollView>