<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorAccent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityPanel.StartPageQuiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="-16dp">

        <TextView
            android:id="@+id/starPageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/startPageTitle"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/lastResult"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/lastResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:text=""
            android:textSize="20dp" />

        <TextView
            android:id="@+id/Level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/hightScore"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:text=""
            android:textSize="20dp" />

        <TextView
            android:id="@string/selectLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/selectLevel"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spinner_difficulty"
            android:layout_width="261dp"
            android:layout_height="39dp"
            android:layout_below="@+id/button_start_quiz"
            android:layout_alignStart="@+id/button_start_quiz"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:textAlignment="center"
            android:spinnerMode="dropdown"
            android:popupBackground="@drawable/spinner"/>

        <Button
            android:id="@+id/button"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:onClick="startQuiz"
            android:background="@drawable/start_button"
            android:freezesText="true"
            android:text="START QUIZ" />
    </LinearLayout>

</RelativeLayout>
    </ScrollView>