<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PanelUser">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Podaj swój nic"
                android:textAlignment="center"
                android:textSize="18dp"/>

            <EditText
                android:id="@+id/nickStudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="false"
                android:layout_centerVertical="false"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/twoj_poz"
                android:textSize="18dp"
                android:layout_marginTop="10dp"/>
            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nickStudent"
                android:entries="@array/poziom"
                android:gravity="center"
                android:textAlignment="center" />


            <RadioGroup
                android:id="@+id/poziomRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/spinner2"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="61dp"
                    android:layout_height="wrap_content"
                    android:text="A1" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="A2" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/urodziny"
                android:textAlignment="center"
                android:textSize="18sp" />
            <DatePicker
                android:id="@+id/dataNaukiDatePicker"
                android:layout_width="249dp"
                android:layout_height="210dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio"
                tools:ignore="UnknownId" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="349dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/widocznosc"
                    android:textSize="15sp" />

                <ToggleButton
                    android:id="@+id/toggleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:checked="true"
                    android:textOff="Nie"
                    android:textOn="Tak" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/regulami"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Akceptujesz regulamin?"
                android:checked="true"/>

            <Button
                android:id="@+id/wyslij"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Wyslij dane"
                android:onClick="wyslij"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>