<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#23293F"
    android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_question"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            app:cardPreventCornerOverlap="false"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="#2C4158"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                android:padding="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    tools:srcCompat="@drawable/def_as_" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:background="#CCDAE7"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/questionTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="80"
                        android:freezesText="true"
                        android:gravity="center"
                        android:text="With Android 8.0 (API level 26) and higher, you can instruct a TextView"
                        android:textColor="#191818"
                        android:textSize="20sp"/>
<!--                        android:autoSizeTextType="uniform"-->
<!--                        android:autoSizeMinTextSize="15sp"-->
<!--                        android:autoSizeMaxTextSize="100sp"-->
<!--                        android:autoSizeStepGranularity="2sp"-->

                    <Button
                        android:id="@+id/speakBtn"
                        android:layout_width="58dp"
                        android:layout_height="41dp"
                        android:layout_weight="20"
                        android:drawableLeft="@android:drawable/ic_media_play"
                        android:text=""
                        android:layout_gravity="center"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/answerTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:background="#CCDAE7"
                    android:freezesText="true"
                    android:gravity="center"
                    android:text="dsfdfdf"
                    android:textColor="#191818"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/sentenceTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="#CCDAE7"
                    android:freezesText="true"
                    android:gravity="center"
                    android:text="Sample sentence with this idom"
                    android:textColor="#191818"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="bottom"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/backQuestion"
                        android:layout_width="0dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:background="@drawable/btn_next_question"
                        android:text="@string/previo_question" />
                    <Button
                        android:id="@+id/btnAddToReplays"
                        android:layout_width="0dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:background="@drawable/btn_add_to_repeat"
                        android:text="@string/repeat" />

                    <Button
                        android:id="@+id/btnNextQuestion"
                        android:layout_width="0dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:background="@drawable/btn_next_question"
                        android:freezesText="true"
                        android:text="@string/nextQuestion" />
                </LinearLayout>

            </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>
</LinearLayout>